hello-node/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    app: hello-node
spec:
  ports:
  - port: 8080
    targetPort: echoserver
  selector:
    app: hello-node
