hello-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  labels:
    app: hello-node
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: echoserver
    nodePort: 30300
  selector:
    app: hello-node
